@@ -3,6 +3,9 @@
 	* NetTransport.cc: close() should shutdown connection
 	in NetTransportMgr, like in dtor.
 
+	* NetTransport.cc: remove linger and keepalive socket
+	options, it not useful, but may lead to rpblems
+
 2006-08-04  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* Cron.h, EvManager.h, NetTransport.h: changes in 
